# finances-statement-service

./: Dockerfile  docker-compose.yaml  pyproject.toml  start.sh
.github/workflows/: docker-image.yml
alembic/: env.py
alembic/versions/: 9361c90771dc_create_statements_table.py
src/finances_statements/: db.py  listener.py  logger.py  main.py  models.py  params.py  routes.py  schemas.py  statement_controller.py
src/finances_statements/services/: accounts.py
tests/: test_main.py
tests/statements/: test_get.py
