[project]
name = "finances-statements"
version = "0.1.0"
description = ""
authors = [{ name = "Mate Csornyei", email = "mcsornyei@priogen.nl" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "python-json-logger (>=3.3.0,<4.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
]

[tool.poetry]
packages = [{ include = "finances_statements", from = "src" }]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
httpx = "^0.28.1"
ruff = "^0.11.5"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
